--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 server.port=8761
+eureka.instance.metadataMap.user=yassine
+eureka.instance.metadataMap.password=root
+
+
+management.tracing.sampling.probability=1
